# sweb

./: CMakeLists.txt
arch/arm/: CMakeLists.txt
arch/arm/common/v5/include/: ArchAtomics.h
arch/arm/common/v5/source/: CMakeLists.txt
arch/arm/common/v7/include/: ArchAtomics.h
arch/arm/common/v7/source/: ArchAtomics.cpp  CMakeLists.txt
arch/arm/integratorcp/: CMakeLists.include
arch/arm/rpi2/: CMakeLists.include  CMakeLists.txt
arch/arm/v5/common/: CMakeLists.txt
arch/arm/v5/common/source/: ArchAtomics.cpp  CMakeLists.txt
arch/arm/v5/integratorcp/: CMakeLists.include  CMakeLists.subfolders  CMakeLists.txt
arch/arm/v5/verdex/: CMakeLists.include  CMakeLists.subfolders
arch/arm/v7/common/source/: CMakeLists.txt
arch/arm/v7/rpi2/: CMakeLists.include  CMakeLists.subfolders  CMakeLists.txt
arch/arm/verdex/: CMakeLists.include  CMakeLists.txt
arch/armv8/common/include/: ArchAtomics.h  ArchThreads.h
arch/armv8/common/source/: ArchAtomics.cpp  ArchThreads.cpp
arch/armv8/rpi3/: CMakeLists.include
arch/x86/32/: CMakeLists.include
arch/x86/32/pae/: CMakeLists.include
arch/x86/64/: CMakeLists.include
arch/x86/64/include/: ArchAtomics.h  ArchThreads.h
arch/x86/64/source/: ArchAtomics.cpp  ArchThreads.cpp
common/include/ustl/: uatomic.h
common/include/util/: RingBuffer.h
common/source/fs/: FileDescriptor.cpp
common/source/kernel/: Lock.cpp  Mutex.cpp  ProcessRegistry.cpp  Scheduler.cpp  SpinLock.cpp
common/source/mm/: new.cpp
utils/: CMakeLists.txt
utils/exe2minixfs/: exe2minixfs.cpp  types.h
(+5 files in other folders)
